--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.3.0",
+    "@react-native-firebase/auth": "^10.3.1",
+    "@react-native-firebase/firestore": "^10.3.1",
+    "@react-native-firebase/storage": "^10.3.1",
+    "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-elements": "^3.0.1",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
